fixed: sidebar overflow in sq calc fixed: convert string to integer when checking value of some checked option

--- a/server/public/css/style.css
+++ b/server/public/css/style.css
@@ -2,6 +2,7 @@
 body {
     background-color: #1d1f29;
     color: #a7b1c1 !important;
+    overflow: hidden;
 }
 
 /* Removes arrows from input */
